hendle status . and operator locat
