# routes/common/router.js
@@ -3,9 +3,10 @@ const router = Router();
 const otpRoute = require("./otp");
 const resetPasswordRoute = require("./resetPassword");
 const tokenVerifyRoute = require("./tokenVerify");
-const qrAndProofRoute = require("./qr&proof");
 const bennersRoute = require("./benners");
 const imgDeleteRoute = require("./imgDelete");
+const locatOperatorRoute = require("./locatOperator");
+const qr_Proof_Doc_Route = require("./qr&proof&doc");
 
 router.get("/", (req, res) => {
   res.status(200).json({ message: "Common routes is working!!" });
@@ -14,8 +15,9 @@ router.get("/", (req, res) => {
 router.use("/tokenVerify", tokenVerifyRoute);
 router.use("/otp", otpRoute);
 router.use("/resetPassword", resetPasswordRoute);
-router.use("/qr&proof", qrAndProofRoute);
+router.use("/qr&proof&doc", qr_Proof_Doc_Route);
 router.use("/benners", bennersRoute);
 router.use("/imgDelete", imgDeleteRoute);
+router.use("/locat/operator", locatOperatorRoute);
 
 module.exports = router;
