# routes/operator/lat_Long.js
@@ -1,0 +1,7 @@
+const { Router } = require("express");
+const { createData } = require("../../controller/operator/lat_Long/create");
+const router = Router();
+
+router.post("/", createData);
+
+module.exports = router;
