# swaggerAi/carrier_openapi.json
@@ -61,6 +61,12 @@
     },
     {
       "name": "Image Delete"
+    },
+    {
+      "name": "Qr & Proof & Doc"
+    },
+    {
+      "name": "LocatOperator"
     }
   ],
   "paths": {
@@ -551,6 +557,25 @@
             }
           }
         },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The data was updated successfully.",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/v1/carrier/movement/complete/{movementId}": {
+      "put": {
+        "tags": ["Movement"],
+        "summary": "Movement complete",
         "security": [
           {
             "bearerAuth": []
@@ -1160,6 +1185,69 @@
         "responses": {
           "200": {
             "description": "File ${filename} deleted successfully from S3 and replaced in the document",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/v1/common/qr&proof&doc/{movementId}": {
+      "post": {
+        "tags": ["Qr & Proof & Doc"],
+        "summary": "Upload",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "qrCode": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "proofOfPhotography": {
+                    "type": "string",
+                    "format": "binary"
+                  },
+                  "documents": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "The data was uploaded successfully.",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": ["Qr & Proof & Doc"],
+        "summary": "FetchData",
+        "responses": {
+          "200": {
+            "description": "The request was processed successfully.",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/v1/common/locat/operator/{operatorAccountId}": {
+      "get": {
+        "tags": ["LocatOperator"],
+        "summary": "Fetch Operators",
+        "responses": {
+          "200": {
+            "description": "The request was processed successfully.",
             "content": {
               "application/json": {}
             }
